Add comprehensive real-time dashboard with API integration
- Dashboard shows live BTC price, trading decisions, confidence levels
- Real-time system health and performance metrics
- Live logs and error tracking with 5-second auto-refresh
- Docker integration with dedicated dashboard service
- API endpoints provide real data from trading system
- PowerShell and bash startup scripts for easy deployment
- Fallback to file-based and mock data when live system unavailable

--- a/.env.example
+++ b/.env.example
@@ -187,3 +187,192 @@ CREWAI_MEMORY_ENABLED=true
 ADK_TASK_TIMEOUT=30
 ADK_RETRY_ATTEMPTS=3
 ADK_BATCH_SIZE=10
+# Agent Trading System Environment Configuration
+# Based on GCP DevOps Agent pattern for comprehensive environment management
+
+# =============================================================================
+# Environment & Application Settings
+# =============================================================================
+APP_ENV=production
+PYTHONPATH=/app
+LOG_LEVEL=INFO
+
+# =============================================================================
+# LLM Configuration (CRITICAL - Required for CrewAI Intelligence)
+# =============================================================================
+# OpenAI API Configuration
+OPENAI_API_KEY=your-openai-api-key-here
+LLM_API_KEY=your-openai-api-key-here
+LLM_BASE_URL=https://api.openai.com/v1
+LLM_COMPLETION_URL=https://api.openai.com/v1/chat/completions
+OPENAI_API_BASE=https://api.openai.com/v1
+LLM_MODEL=gpt-4
+MODEL_GPT_4O=gpt-4
+LLM_TEMPERATURE=0.3
+LLM_API_VERSION=2023-12-01-preview
+
+
+# CrewAI Specific Settings
+CREWAI_TEMPERATURE=0.3
+CREWAI_MAX_ITERATIONS=3
+CREWAI_MEMORY_ENABLED=true
+AGENT_MAX_ITERATIONS=5
+AGENT_TIMEOUT_SECONDS=300
+AGENT_VERBOSE=true
+
+# =============================================================================
+# Database Configuration (PostgreSQL)
+# =============================================================================
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/agent_trading
+DATABASE_POOL_SIZE=10
+DATABASE_MAX_OVERFLOW=20
+DATABASE_POOL_TIMEOUT=30
+
+# =============================================================================
+# Redis Configuration (Caching & Session Management)
+# =============================================================================
+REDIS_URL=redis://redis:6379
+REDIS_DB=0
+REDIS_MAX_CONNECTIONS=10
+REDIS_SOCKET_TIMEOUT=5
+
+# =============================================================================
+# Binance API Configuration (Trading Data Source)
+# =============================================================================
+BINANCE_API_KEY=your-binance-api-key-here
+BINANCE_SECRET=your-binance-secret-here
+BINANCE_TESTNET=true
+
+# =============================================================================
+# BTC Trading Configuration (Primary Focus)
+# =============================================================================
+PRIMARY_SYMBOL=BTCUSDT
+TIMEFRAME=15m
+UPDATE_INTERVAL=30
+HISTORICAL_DAYS=30
+
+# =============================================================================
+# Data Quality & Processing Settings
+# =============================================================================
+MIN_DATA_QUALITY=0.8
+MAX_PRICE_GAP=0.05
+VOLUME_THRESHOLD_PERCENTILE=0.1
+CACHE_ENABLED=true
+CACHE_EXPIRY=3600
+DATA_BATCH_SIZE=1000
+DATA_MAX_RETRIES=3
+
+# =============================================================================
+# Trading & Risk Management Settings
+# =============================================================================
+MIN_VALIDATION_SCORE=0.7
+MAX_POSITION_SIZE=10000
+MAX_DAILY_LOSS=5000
+MAX_PORTFOLIO_EXPOSURE=50000
+VAR_LIMIT=2000
+CONCENTRATION_LIMIT=0.2
+ENABLE_LIVE_TRADING=false
+
+# Trading Cycle Configuration
+TRADING_CYCLE_INTERVAL=300
+TRADING_HOURS_START=9
+TRADING_HOURS_END=17
+TIMEZONE=UTC
+
+# =============================================================================
+# ADK Configuration (Execution Layer)
+# =============================================================================
+ADK_TASK_TIMEOUT=30
+ADK_RETRY_ATTEMPTS=3
+ADK_BATCH_SIZE=10
+
+# =============================================================================
+# Docker Configuration (Container Environment)
+# =============================================================================
+CONTAINER_NAME=agent-trading-app
+NETWORK_NAME=agent-trading-network
+DATA_VOLUME=/app/data
+LOGS_VOLUME=/app/logs
+MODELS_VOLUME=/app/models
+
+# =============================================================================
+# Monitoring & Metrics
+# =============================================================================
+METRICS_PORT=8080
+PROMETHEUS_ENABLED=true
+HEALTH_CHECK_INTERVAL=30
+
+# =============================================================================
+# Additional Financial Data Sources (Optional)
+# =============================================================================
+FINANCIAL_API_KEY=your-financial-api-key
+YFINANCE_ENABLED=true
+
+# =============================================================================
+# Feature Engineering Settings
+# =============================================================================
+ENABLE_LEGACY_RL=true
+ENABLE_TECHNICAL_FEATURES=true
+ENABLE_MICROSTRUCTURE=true
+FEATURE_CACHE_ENABLED=true
+MAX_FEATURES=100
+
+# =============================================================================
+# Security & Authentication (Future Extensions)
+# =============================================================================
+# JWT_SECRET_KEY=your-jwt-secret-key
+# API_RATE_LIMIT=100
+# SESSION_TIMEOUT=3600
+
+# =============================================================================
+# Broker Configuration (Mock for Testing)
+# =============================================================================
+BROKER_API_KEY=test-key
+BROKER_SECRET=test-secret
+BROKER_TESTNET=true
+
+# =============================================================================
+# IMPORTANT NOTES:
+# =============================================================================
+# 1. OPENAI_API_KEY and LLM_API_KEY should contain your actual OpenAI API key
+# 2. BINANCE_API_KEY and BINANCE_SECRET should contain your Binance API credentials
+# 3. Set BINANCE_TESTNET=false ONLY when ready for live trading
+# 4. All database and Redis URLs are configured for Docker Compose
+# 5. Start with default values and adjust based on your risk tolerance
+
+# Risk Management
+MAX_POSITION_SIZE=10000
+MAX_DAILY_LOSS=5000
+MAX_PORTFOLIO_EXPOSURE=50000
+VAR_LIMIT=2000
+CONCENTRATION_LIMIT=0.2
+
+# Broker Configuration (Mock for testing)
+BROKER_API_KEY=test-key
+BROKER_SECRET=test-secret
+BROKER_TESTNET=true
+
+# Data Sources
+FINANCIAL_API_KEY=your-financial-api-key
+BINANCE_API_KEY=your-binance-api-key
+BINANCE_SECRET=your-binance-secret
+
+# Monitoring
+LOG_LEVEL=INFO
+METRICS_PORT=8080
+PROMETHEUS_ENABLED=true
+
+# Feature Engineering
+ENABLE_LEGACY_RL=true
+ENABLE_TECHNICAL_FEATURES=true
+ENABLE_MICROSTRUCTURE=true
+
+# CrewAI Settings
+CREWAI_TEMPERATURE=0.3
+CREWAI_MAX_ITERATIONS=3
+CREWAI_MEMORY_ENABLED=true
+
+# ADK Settings
+ADK_TASK_TIMEOUT=30
+ADK_RETRY_ATTEMPTS=3
+ADK_BATCH_SIZE=10
