--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,31 @@ services:
       retries: 3
       start_period: 40s
 
+  dashboard:
+    build:
+      context: .
+      dockerfile: Dockerfile.dashboard
+    platform: linux/amd64
+    container_name: agent-trading-dashboard
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    environment:
+      - APP_ENV=production
+    volumes:
+      - ./data:/app/data
+      - ./logs:/app/logs
+    depends_on:
+      - agent-trading
+    networks:
+      - agent-trading-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+
   redis:
     image: redis:7-alpine
     platform: linux/amd64
