Fix dashboard issues: proper Docker environment setup, file-based data sharing, and permission fixes
- Fixed Dockerfile.dashboard to create proper user permissions and avoid CrewAI permission errors
- Updated docker-compose.yml to pass all required environment variables to dashboard service
- Modified dashboard_api.py to read from shared data files instead of trying to create full trading system instance
- Added file-based data sharing in main.py: writes market data, decisions, and performance to JSON files
- Fixed confidence display issue by ensuring real data flows from trading system to dashboard
- Improved error handling and fallback mechanisms in dashboard API
- Removed numpy dependency for simpler calculations that work in Docker environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,11 +41,32 @@ services:
       - "8080:8080"
     environment:
       - APP_ENV=production
+      # LLM Configuration
+      - LLM_API_KEY=${LLM_API_KEY}
+      - LLM_BASE_URL=${LLM_BASE_URL:-https://api.openai.com/v1}
+      - LLM_MODEL=${LLM_MODEL:-gpt-4}
+      - LLM_TEMPERATURE=${LLM_TEMPERATURE:-0.3}
+      # Binance Configuration
+      - BINANCE_API_KEY=${BINANCE_API_KEY}
+      - BINANCE_SECRET_KEY=${BINANCE_SECRET_KEY}
+      - BINANCE_TESTNET=${BINANCE_TESTNET:-true}
+      - TRADING_SYMBOL=${TRADING_SYMBOL:-BTCUSDT}
+      - TIMEFRAME=${TIMEFRAME:-15m}
+      # Database Configuration (Docker service names)
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/agent_trading
+      - REDIS_URL=redis://redis:6379
+      # Risk Management
+      - MAX_POSITION_SIZE=${MAX_POSITION_SIZE:-10000}
+      - MAX_DAILY_LOSS=${MAX_DAILY_LOSS:-5000}
+      - VAR_LIMIT=${VAR_LIMIT:-2000}
+      - CONCENTRATION_LIMIT=${CONCENTRATION_LIMIT:-0.2}
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
     depends_on:
       - agent-trading
+      - postgres
+      - redis
     networks:
       - agent-trading-network
     healthcheck:
