--- a/Dockerfile.dashboard
+++ b/Dockerfile.dashboard
@@ -16,18 +16,27 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Install additional dashboard dependencies
 RUN pip install --no-cache-dir flask==2.3.3 flask-cors==4.0.0
 
+# Create app user with proper permissions
+RUN useradd -m -u 1000 appuser && \
+    mkdir -p /app/logs /app/data /home/appuser && \
+    chown -R appuser:appuser /app /home/appuser
+
 # Copy the application code
 COPY src/ ./src/
 COPY dashboard_api.py .
 COPY dashboard.html .
 
-# Create necessary directories
-RUN mkdir -p logs data
+# Set ownership
+RUN chown -R appuser:appuser /app
+
+# Switch to app user
+USER appuser
 
 # Set environment variables
 ENV PYTHONPATH=/app
 ENV FLASK_APP=dashboard_api.py
 ENV FLASK_ENV=production
+ENV HOME=/home/appuser
 
 # Expose port
 EXPOSE 8080
