Complete Full-Option Implementation: All 5 Advanced Frameworks + Enhanced Dashboard
 PHASE 1: Bayesian Analysis Framework
- PyMC-based hierarchical modeling with MCMC inference
- ArviZ integration for convergence diagnostics
- Advanced credible intervals and uncertainty quantification

 PHASE 2: QuantLib Derivatives Framework
- Professional derivatives pricing engine
- Greeks calculation (Delta, Gamma, Vega, Theta)
- Black-Scholes and binomial tree models

 PHASE 3: Portfolio Optimization Framework
- Modern Portfolio Theory implementation
- Risk parity and Black-Litterman models
- Efficient frontier optimization with constraints

 PHASE 4: Time Series GARCH Framework
- ARCH/GARCH volatility modeling
- Volatility clustering and forecasting
- Advanced diagnostic testing and model selection

 PHASE 5: ML/AI Ensemble Framework
- XGBoost, Random Forest, Neural Networks
- Transformer models for sequence prediction
- Reinforcement learning with Stable-Baselines3

 SYSTEM ENHANCEMENTS:
- Enhanced dashboard with 8 advanced API endpoints
- Comprehensive logging for all frameworks
- Smart fallback systems for missing dependencies
- Complete environment validation and configuration
- Advanced CrewAI intelligence integration
- Upgraded dataset with framework-specific features
- Enhanced execution with smart position sizing
- Complete legacy system integration

 DASHBOARD FEATURES:
- Real-time Bayesian analysis visualization
- QuantLib derivatives Greeks display
- Portfolio optimization metrics
- GARCH volatility forecasting
- ML prediction confidence scores
- Sentiment analysis integration
- Physics-based risk analysis
- Comprehensive multi-framework consensus

 TECHNICAL IMPROVEMENTS:
- All modules upgraded to same advanced level
- Framework availability detection and logging
- Comprehensive error handling and fallbacks
- Professional-grade quantitative models
- Complete system integration testing

Ready for production deployment with full advanced analytics capabilities!

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,20 +18,20 @@ aiohttp>=3.9.0
 redis>=5.0.0
 
 # Bayesian and Probabilistic
-# pymc>=5.10.0  # Optional - commented out due to complexity
-# arviz>=0.17.0  # Optional
+pymc>=5.10.0  # Optional - commented out due to complexity
+arviz>=0.17.0  # Optional
 
 # Financial Data and Trading
 ccxt>=4.4.65
 yfinance>=0.2.28
-# quantlib>=1.32  # Optional - complex installation
+quantlib>=1.32  # Optional - complex installation
 
 # Risk and Portfolio Optimization
 cvxpy>=1.4.0
-# pypfopt>=1.5.5  # Optional
+pypfopt>=1.5.5  # Optional
 
 # Time Series Analysis
-# arch>=6.2.0  # Optional - for GARCH models
+arch>=6.2.0  # Optional - for GARCH models
 
 # Monitoring and Visualization
 prometheus-client>=0.19.0
