--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,45 @@
-# Core Dependencies
-numpy>=1.24.0
-pandas>=2.1.0
-scipy>=1.11.0
-scikit-learn>=1.3.0
-statsmodels>=0.14.0
+numpy>=1.25.0,<1.27.0
+pandas>=2.2.2,<2.3.0
+scipy>=1.10.0,<1.11.0
+scikit-learn>=1.5.0,<1.6.0
+statsmodels>=0.14.2,<0.15.0
 
-# CrewAI and LLM
-crewai>=0.70.1
-langchain>=0.1.0
-openai>=1.0.0
+crewai>=0.60.0,<0.64.0
+openai>=0.28.1,<0.30.0
+litellm>=1.40.0,<1.50.0
 
-# ADK and Async
-pydantic>=2.0.0
-fastapi>=0.104.0
-uvicorn>=0.24.0
-aiohttp>=3.9.0
-redis>=5.0.0
+pydantic>=2.8.0,<3.0.0
+fastapi>=0.112.0,<0.115.0
+uvicorn>=0.30.0,<0.33.0
+aiohttp>=3.10.0,<3.11.0
+redis>=5.1.0,<5.2.0
 
-# Bayesian and Probabilistic
-pymc>=5.10.0  # Optional - commented out due to complexity
-arviz>=0.17.0  # Optional
+ccxt>=4.4.96,<4.5.0
+yfinance>=0.2.38,<0.3.0
+quantlib>=1.34,<1.35
 
-# Financial Data and Trading
-ccxt>=4.4.65
-yfinance>=0.2.28
-quantlib>=1.32  # Optional - complex installation
+cvxpy>=1.5.0,<1.6.0
+arch>=7.0.0,<7.1.0
 
-# Risk and Portfolio Optimization
-cvxpy>=1.4.0
-pypfopt>=1.5.5  # Optional
+prometheus-client>=0.19.0,<0.20.0
+matplotlib>=3.9.2,<3.10.0
+plotly>=5.17.0,<6.0.0
+seaborn>=0.13.0,<0.14.0
 
-# Time Series Analysis
-arch>=6.2.0  # Optional - for GARCH models
+python-dotenv>=1.0.0,<2.0.0
+rich>=13.9.4,<14.0.0
+loguru>=0.7.2,<0.8.0
+asyncio-mqtt>=0.16.0,<0.17.0
 
-# Monitoring and Visualization
-prometheus-client>=0.19.0
-matplotlib>=3.9.2
-plotly>=5.17.0
-seaborn>=0.13.0
+jupyter>=1.0.0,<2.0.0
+pytest>=7.4.0,<8.0.0
+pytest-asyncio>=0.21.0,<0.22.0
+black>=23.7.0,<24.0.0
+isort>=5.12.0,<6.0.0
+mypy>=1.5.0,<2.0.0
 
-# Utilities
-python-dotenv>=1.0.0
-rich>=13.9.4
-loguru>=0.7.2
-asyncio-mqtt>=0.16.0
+psycopg2-binary>=2.9.0,<2.10.0
+sqlalchemy>=2.0.23,<2.1.0
+sqlalchemy[asyncio]>=2.0.23,<2.1.0
 
-# Development
-jupyter>=1.0.0
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-black>=23.7.0
-isort>=5.12.0
-mypy>=1.5.0
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
-sqlalchemy[asyncio]==2.0.23
-litellm>=1.40.0
-hmmlearn>=0.3.0
+hmmlearn>=0.3.0,<0.4.0
